[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "crawlly"
dependencies = [
    # Include the following dependencies in the final package: httpx, beautiful soup, selenium, asyncio, csv
    "httpx",
    "beautifulsoup4",
    "selenium",
    "asyncio",
    "csv",
]